2012-03-01  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.2.0-rc4 Released.

	* main/acl.c: Prevent outbound SIP NOTIFY packets from displaying a
	  port of 0.

	  In the change from 1.6.2 to 1.8, ast_sockaddr was introduced which
	  changed the behavior of ast_find_ourip such that port number was
	  wiped out.  This caused the port in internip (which is used for
	  Contact and Call-ID on NOTIFYs) to be 0.  This change causes
	  ast_find_ourip to be port-preserving again.

2012-02-28  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 10.2.0-rc3 Released.

	* main/channel.c: Fix callerid of Originated calls.

	  The callerid of originated calls (independent of mechanism) was not
	  being passed to the outbound channel.  This patch fixes that.  Thanks
	  to Matt Riddell for tracking this down.
	  (closes issue ASTERISK-19385)
	  Reported by: ornix

	* channels/chan_sip.c: Fix ACK routing for non-2xx responses.

	  When we send an ACK for a 2xx response to an INVITE, we are supposed
	  to use the learned route set. However, when we receive a non-2xx
	  final response to an INVITE, we are supposed to send the ACK to the
	  same place we initially sent the INVITE.

	  We had been doing this up until the changes went in that would build
	  a route set from provisional responses. That introduced a regression
	  where we would use the learned route set under all circumstances.

	  With this change, we now will set the destination of our ACK based on
	  the invitestate. If it is INV_COMPLETED then that means that we have
	  received a non-2xx final response (INV_TERMINATED indicates a 2xx
	  response was received).  If it is INV_CANCELLED, then that means the
	  call is being canceled, which means that we should be ACKing a 487
	  response.

	  The other change introduced here is setting the invitestate to
	  INV_CONFIRMED when we send an ACK *after* the reqprep instead of
	  before. This way, we can tell in reqprep more easily what the